--- a/NuGet/EverydayToolkit.nuspec
+++ b/NuGet/EverydayToolkit.nuspec
@@ -17,6 +17,6 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="EverydayToolkit\bin\Release\EverydayToolkit.dll" target="lib\net45" />
+    <file src="..\EverydayToolkit\bin\Release\EverydayToolkit.dll" target="lib\net45" />
   </files>
 </package>
