--- a/EverydayToolkit/EverydayToolkit.csproj
+++ b/EverydayToolkit/EverydayToolkit.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\TranslatioController.cs" />
     <Compile Include="Controllers\SitemapController.cs" />
     <Compile Include="Core\JsonNetResult.cs" />
     <Compile Include="Core\Sitemap\ChangeFrequency.cs" />
